--- a/app/src/main/res/anim/slide_in_start.xml
+++ b/app/src/main/res/anim/slide_in_start.xml
@@ -2,12 +2,12 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:shareInterpolator="false">
     <translate
-        android:duration="200"
-        android:fromXDelta="100%"
-        android:toXDelta="0%" />
+        android:duration="150"
+        android:fromXDelta="30%"
+        android:toXDelta="0" />
 
     <alpha
-        android:duration="200"
         android:fromAlpha="0"
+        android:duration="200"
         android:toAlpha="1" />
 </set>
