--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,7 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowTranslucentStatus">true</item>
     </style>
+
     <style name="AppTheme.PrimaryColorStatusBar" parent="AppTheme.LigthStatusBar">
         <item name="colorPrimaryDark">@color/colorPrimary</item>
     </style>
@@ -34,6 +35,15 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:drawablePadding">16dp</item>
     </style>
+
+    <style name="AppInfoMenuItem" parent="MenuItemCustom">
+        <item name="android:textColor">@color/md_black_1000</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
