--- a/app/src/main/res/layout/fragment_appinfo.xml
+++ b/app/src/main/res/layout/fragment_appinfo.xml
@@ -2,12 +2,12 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/md_white_1000">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/md_white_1000"
         android:clickable="true"
         android:focusable="true">
 
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintWidth_default="percent"
             app:layout_constraintWidth_percent="0.3"
-            app:srcCompat="@drawable/ic_whatshot_accent_24dp" />
+            app:srcCompat="@drawable/ic_tinder" />
 
         <TextView
             android:id="@+id/txtAppName"
@@ -38,6 +38,7 @@
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/md_blue_grey_500"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
