--- a/app/src/main/res/layout/post_item_post.xml
+++ b/app/src/main/res/layout/post_item_post.xml
@@ -55,6 +55,17 @@
             app:layout_constraintStart_toEndOf="@+id/imgProfile"
             app:layout_constraintTop_toBottomOf="@+id/txtName" />
 
+        <me.gujun.android.taggroup.TagGroup
+            android:id="@+id/tagGroup"
+            style="@style/TagCustomGroup"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/imgMoreHorizontal"
+            app:layout_constraintStart_toEndOf="@+id/imgProfile"
+            app:layout_constraintTop_toBottomOf="@+id/imgProfile" />
+
         <TextView
             android:id="@+id/txtContent"
             android:layout_width="0dp"
@@ -71,7 +82,7 @@
             android:textIsSelectable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgProfile" />
+            app:layout_constraintTop_toBottomOf="@+id/tagGroup" />
 
         <TextView
             android:id="@+id/txtLikesCount"
